src/app.css
*,
::before,
::after {
	box-sizing: border-box;
	transition: background-color 0.2s, color 0.2s, text-shadow 0.2s ease;
}

:root {
	font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
		Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
	border: none;

	color-scheme: light;
	color: hsl(0, 0%, 0%);
	background-color: hsl(180, 7%, 97%);
	--primary: hsl(128, 88%, 20%);
	--primary-hover: hsl(130, 66%, 28%);
	--primary-active: hsl(104, 75%, 20%);
	--primary-text: hsl(0, 0%, 84%);
	--primary-selecting-text: hsl(0, 0%, 100%);
	--secondary: hsl(224, 81%, 55%);
	--secondary-hover: hsl(224, 76%, 44%);
	--secondary-active: hsl(226, 67%, 56%);
	--secondary-text: hsl(0, 0%, 100%);
	--therdary: hsl(210, 6%, 86%);
	--therdary-hover: hsl(210, 28%, 77%);
	--therdary-active: hsl(0, 0%, 95%);
	--therdary-text: hsl(0, 0%, 0%);
	--quaternary: hsl(60, 64%, 74%);
	--quaternary-text: hsl(50, 85%, 10%);
	--quaternary-border: hsl(60, 82%, 41%);
}

:root.dark_mode {
	color-scheme: dark;
	color: hsl(0, 0%, 100%);
	background-color: hsl(180, 2%, 8%);
	--primary: hsl(104, 87%, 12%);
	--primary-hover: hsl(104, 74%, 19%);
	--primary-active: hsl(104, 97%, 24%);
	--primary-text: hsl(0, 0%, 84%);
	--primary-selecting-text: hsl(0, 0%, 100%);
	--secondary: hsl(212, 87%, 38%);
	--secondary-hover: hsl(244, 78%, 40%);
	--secondary-active: hsl(226, 65%, 43%);
	--secondary-text: hsl(0, 0%, 100%);
	--therdary: hsl(140, 2%, 25%);
	--therdary-hover: hsl(214, 26%, 17%);
	--therdary-active: hsl(0, 0%, 29%);
	--therdary-text: hsl(0, 0%, 100%);
	--quaternary: hsl(60, 25%, 18%);
	--quaternary-text: hsl(75, 46%, 87%);
	--quaternary-border: hsl(60, 90%, 20%);
}

body,
#app {
	margin: 0;
	padding: 0;
	width: 100vw;
	width: 100dvw;
	height: 100vh;
	height: 100dvh;
}

button {
	padding: 0;
	margin: 0;
	border: none;

	transition: transform 0.1s ease;
	transform: scale(100%);
}
button:active {
	transform: scale(96%);
}

dialog {
	max-width: 100vw;
	max-width: 100dvw;
	max-height: 100vh;
	max-height: 100dvw;
	border: none;
}

main {
	animation: fadein 0.2s linear 0s 1 normal;
}

@keyframes fadein {
	from {
		filter: opacity(0%);
	}

	to {
		filter: opacity(100%);
	}
}

@keyframes popup {
	0% {
		transform: scale(0%);
	}

	50% {
		transform: scale(80%);
	}

	100% {
		transform: scale(100%);
	}
}

@media (prefers-reduced-motion) {
	*,
	::before,
	::after {
		transition: none !important;
		animation: none !important;
	}

	button {
		transform: scale(100%) !important;
	}
}

